# twitter-amnesia

./: .gitignore  README.md  README.rst  development_requirements.txt  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
config-example/: service-config.yaml
src/twitter_amnesia/: __main__.py  arg_parsing.py  configuration_parser.py  main.py  version.py
